app/assets/stylesheets/primero/forms_fields.scss
/* ... */
////////////////////////////////////////////////
// User forms
////////////////////////////////////////////////

fieldset {
  .row {
    .footnote {
      font-size: 0.8rem;
      margin-left: 8rem;
    }

    .required {
      float: right;
      color: $red_color;
    }

    .form-section-required {
      float: right;
      position: absolute;
      right: 0;
      margin-right: -6px
    }

    .value {
      color: #666;
      display: block;
      float: left;
      padding-top: 4px;
      width: 100%;

      .section {
        display: block;
        margin-bottom: 20px;
        padding: 10px;

        .title {
          border-bottom: 1px dashed $stroke_green_color;
          color: #333;
          display: block;
          margin-bottom: 5px;
          padding-bottom: 8px;
          font-weight: bold;
        }

        label {
          display: block;
          padding: 3px;
          font-weight: normal;
        }
      }

      &.value-nobg {
        background: none;
      }

      ul li {
        margin-left: 20px;
        font-size: .8rem;
      }
    }
  }

  .row span.section {
    background: none repeat scroll 0 0 #f9faf6;
  }
}

.form-section-content {

  fieldset {
    .row {
      padding:5px 0;
    }

    &.panel {
      padding: 20px !important;
      background: #f7f7f7;
      border: 1px solid #ddd !important;
      margin: 0;
    }
  }

  hr {
    background: none;
    border-bottom: 1px solid #ebebeb
  }
}

.index_filters select {
  width: 200px;
  float: right;
  margin-left: 10px;
}


////////////////////////////////////////////////
// Date Picker
////////////////////////////////////////////////

.ui-datepicker {
  background: $desat_green_color !important;
  -webkit-box-shadow: 0 0 4px 1px rgba(0,0,0,.2);
  box-shadow: 0 0 4px 1px rgba(0,0,0,.2);
  border: 1px solid $stroke_green_color !important;
}

select.ui-datepicker-month {
  margin-right: 1px !important;
  border: 1px solid $stroke_green_color;
}

select.ui-datepicker-year {
  margin-left: 1px !important;
  border: 1px solid $stroke_green_color;
}

.ui-datepicker .ui-datepicker-prev , .ui-datepicker .ui-datepicker-next  {
  border: none !important;
}

.ui-datepicker-calendar {
  border: none;

  thead th {
    background: $desat_green_color;
    color: $green_color;
  }

  a {
    &.ui-state-default {
      border: 1px solid $stroke_green_color;
      color: $green_color;
      background: $light_green_color;

      &:hover {
        background: $desat_green_color;
      }
    }

    &.ui-state-active  {
      background: $desat_green_color;
      border: 1px solid $desat_green_color;
    }
  }
}

.errorExplanation {
  background: #FFD8D8;
  padding: 10px;
  border: 1px solid #F76F6F;
  margin: 15px;

  h2 {
    font-size: 1.3rem;
  }

  p {
    background: #FFD8D8 !important;
    font-weight:bold;
    color: #F76F6F
  }

  li {
    font-size: .8rem;

    span {
      font-weight: bold;

      &:first-of-type {
        color: #333;
        margin-right: 10px;
        padding-right: 5px;
        border-right: 4px solid #F76F6F
      }

      &:last-of-type {
        color: #F76F6F;
      }
    }
  }
}

.form-footer {
  margin-top: 2% !important;

  ul {
    margin: 0 2%;

    li {
      margin: 0 2%;
    }
  }

  a {
    border-bottom: 1px dotted $grey_color;
    padding-bottom: 2px;
    text-decoration: none;
    font-size: .9rem;

    &:hover {
      color: #000 !important;
      font-weight: bold;
    }
  }
}

#record_info_modal {
  h1 {
    font-size: 1.5rem !important;
  }

  p {
    font-size: .95rem;

    span {
      font-weight: bold;
      color: $green_color;
    }
  }
}

